[gd_scene load_steps=5 format=2]

[ext_resource path="res://MarioScenes/Bullet.gd" type="Script" id=1]
[ext_resource path="res://Sprites/K_Enemy/bullet/bullet_0.png" type="Texture" id=2]
[ext_resource path="res://Sounds/MarioSounds/Nueva carpeta/smw_thud.wav" type="AudioStream" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 72.5491
height = 9.52105

[node name="Bullet" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4, 0 )
rotation = 1.57006
scale = Vector2( 1, 1 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Sounds" type="Node" parent="."]

[node name="Enter" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 3 )
volume_db = -5.0

[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
